# DiceBot

./: .gitignore  .pre-commit-config.yaml  README.md  pylintrc  setup.cfg  setup.py
src/dice_bot/: bot.py  cli.py  dice.py
tests/: test_dice.py
