[metadata]
name = dice_bot
description = DiceBot
author = LudwigSchallner
author_email = ludwig@schallner.de

[options]
setup_requires =
  setuptools_scm
  pip-tools
package_dir =
    =src
packages = find:
include_package_data = true
install_requires =
    pydantic
    pyyaml
    typer
    discord.py

[options.extras_require]
tests =
    pytest
    pytest-datadir
    pytest-mock
    pytest-cov
develop =
    mypy
    pylint
    pylint-pydantic
    pre-commit
    types-PyYAML

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    dice = dice_bot.cli:app

[pydocstyle]
convention = numpy
# D105 Missing docstring in magic method
# D202 No blank lines allowed after function docstring
add_ignore = D105, D202
match = (src|tests)/.*\.py

[mypy]
# warnings
warn_unused_configs = True
warn_redundant_casts = True
warn_no_return = True
warn_unreachable = True

# terminal settings
show_error_codes = True
show_column_numbers = True
pretty = True
color_output = True

# type checker settings
follow_imports = normal
ignore_missing_imports = True
check_untyped_defs = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True

# report
cobertura_xml_report = mypy-reports
html_report = htmlmypy

[isort]
line_length = 88
multi_line_output = 3
known_first_party= dice_bot
include_trailing_comma=True
use_parentheses=True
default_section = THIRDPARTY
force_sort_within_sections=True
order_by_type=False
skip = jupyter

[flake8]
# Specify the line length to be compatible with black.
max_line_length = 88
# Ignore inconsistent warnings:
# E203 whitespace before ':'
# W503 line break before binary operator
ignore = E203, W503
# Select all pycodestyle errors (E) and warnings (W) and pyflakes (F) errors.
select = E,F,W

[semantic_release]
version_variable = release-version.txt:released_version
version_source = tag
commit_version_number = false
